--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,10 @@ body {
   margin-top: 8px;
   color: lightgrey;
 }
+#birthday-name {
+  font-size: 40px;
+  margin-bottom: 20px;
+}
 h1 {
   font-weight: normal;
 }
